// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ComparisonHeader should render correctly 1`] = `
<Fragment>
  <tr
    className="sticky-column-header"
  >
    <th
      className="fact-header sticky-column fixed-column-1 pointer"
      data-ouia-component-id="fact-sort-button"
      data-ouia-component-type="PF4/Button"
      id=""
      key="fact-header"
      onClick={[Function]}
    >
      <div
        className="active-blue"
      >
        Fact 
        <ArrowsAltVIcon
          className="not-active"
          color="currentColor"
          noVerticalAlign={false}
          size="sm"
        />
      </div>
    </th>
    <th
      className="state-header sticky-column fixed-column-2 pointer"
      id="disabled"
      key="state-header"
      onClick={[Function]}
    >
      <div>
        State 
        <ArrowsAltVIcon
          className="not-active"
          color="currentColor"
          noVerticalAlign={false}
          size="sm"
        />
      </div>
    </th>
  </tr>
</Fragment>
`;

exports[`ComparisonHeader should render fact sort asc 1`] = `
<Fragment>
  <tr
    className="sticky-column-header"
  >
    <th
      className="fact-header sticky-column fixed-column-1 pointer"
      data-ouia-component-id="fact-sort-button"
      data-ouia-component-type="PF4/Button"
      id="asc"
      key="fact-header"
      onClick={[Function]}
    >
      <div
        className="active-blue"
      >
        Fact 
        <LongArrowAltUpIcon
          className="active-blue"
          color="currentColor"
          noVerticalAlign={false}
          size="sm"
        />
      </div>
    </th>
    <th
      className="state-header sticky-column fixed-column-2 pointer"
      id="disabled"
      key="state-header"
      onClick={[Function]}
    >
      <div>
        State 
        <ArrowsAltVIcon
          className="not-active"
          color="currentColor"
          noVerticalAlign={false}
          size="sm"
        />
      </div>
    </th>
  </tr>
</Fragment>
`;

exports[`ComparisonHeader should render fact sort desc 1`] = `
<Fragment>
  <tr
    className="sticky-column-header"
  >
    <th
      className="fact-header sticky-column fixed-column-1 pointer"
      data-ouia-component-id="fact-sort-button"
      data-ouia-component-type="PF4/Button"
      id="desc"
      key="fact-header"
      onClick={[Function]}
    >
      <div
        className="active-blue"
      >
        Fact 
        <LongArrowAltDownIcon
          className="active-blue"
          color="currentColor"
          noVerticalAlign={false}
          size="sm"
        />
      </div>
    </th>
    <th
      className="state-header sticky-column fixed-column-2 pointer"
      id="disabled"
      key="state-header"
      onClick={[Function]}
    >
      <div>
        State 
        <ArrowsAltVIcon
          className="not-active"
          color="currentColor"
          noVerticalAlign={false}
          size="sm"
        />
      </div>
    </th>
  </tr>
</Fragment>
`;

exports[`ComparisonHeader should render state sort asc 1`] = `
<Fragment>
  <tr
    className="sticky-column-header"
  >
    <th
      className="fact-header sticky-column fixed-column-1 pointer"
      data-ouia-component-id="fact-sort-button"
      data-ouia-component-type="PF4/Button"
      id=""
      key="fact-header"
      onClick={[Function]}
    >
      <div
        className="active-blue"
      >
        Fact 
        <ArrowsAltVIcon
          className="not-active"
          color="currentColor"
          noVerticalAlign={false}
          size="sm"
        />
      </div>
    </th>
    <th
      className="state-header sticky-column fixed-column-2 pointer"
      id="asc"
      key="state-header"
      onClick={[Function]}
    >
      <div
        className="active-blue"
      >
        State 
        <LongArrowAltUpIcon
          className="active-blue"
          color="currentColor"
          noVerticalAlign={false}
          size="sm"
        />
      </div>
    </th>
  </tr>
</Fragment>
`;

exports[`ComparisonHeader should render state sort desc 1`] = `
<Fragment>
  <tr
    className="sticky-column-header"
  >
    <th
      className="fact-header sticky-column fixed-column-1 pointer"
      data-ouia-component-id="fact-sort-button"
      data-ouia-component-type="PF4/Button"
      id=""
      key="fact-header"
      onClick={[Function]}
    >
      <div
        className="active-blue"
      >
        Fact 
        <ArrowsAltVIcon
          className="not-active"
          color="currentColor"
          noVerticalAlign={false}
          size="sm"
        />
      </div>
    </th>
    <th
      className="state-header sticky-column fixed-column-2 pointer"
      id="desc"
      key="state-header"
      onClick={[Function]}
    >
      <div
        className="active-blue"
      >
        State 
        <LongArrowAltDownIcon
          className="active-blue"
          color="currentColor"
          noVerticalAlign={false}
          size="sm"
        />
      </div>
    </th>
  </tr>
</Fragment>
`;
